--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur earum beatae rerum asperiores, accusamus reprehenderit fuga. Beatae blanditiis soluta molestias voluptas incidunt praesentium consequuntur, delectus ipsum corporis, nobis rerum sequi!
     </div>
     <div class="derecha" >
-       Maria Sofia Castrillon Martinez,
-       Bladimir Escobar Chimá,
-       Susana Guerrero Cuervo.
+       Geronimo Zuluaga,
+       Juan Sebastian Villada,
+       Victor Manuel Murillo.
     </div>
  </div>
 </div>  
