--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div class="encabezado">
        Tecnología e informática
     </div>
- <div class="menu"></div>
+ <div class="menu">
+<div  class="Inicio"></div>
+<div  class="Sociales"></div>
+<div  class="Ingles"></div>
+ </div>
  <div class="contenedor2">
 
     <div class="izquierda" >
