--- a/sociales.html
+++ b/sociales.html
@@ -11,13 +11,13 @@
   <div class="contenedor">
    
     <div class="encabezado">
-       Tecnología e informática
+    Ciencias Sociales
     </div>
  <div class="menu">
-<div  class="Inicio"></div>   
-<div  class="Sociales">
-<a href="sociales.html">Sociales</a>
+<div  class="Inicio">
+   <a href="index.html">Inicio</a>
 </div>
+<div  class="Sociales"></div>
 <div  class="Ingles"></div>
  </div>
  <div class="contenedor2">
