Actualizacion4 27 de marzo 2023

--- a/ingles.html
+++ b/ingles.html
@@ -15,18 +15,10 @@
     </div>
  <div class="menu">
 <div  class="Inicio"></div>   
-<div  class="Sociales">
-<a href="sociales.html">Sociales</a>
+<a href="index.html">Inicio</a>
 </div>
-<div  class="Ingles">
-   <a href="ingles.html">Ingles</a>
-</div>
-<div  class="biologia">
-   <a href="biologia.html">Biologia</a>
-</div>
-<div  class="matematicas">
-<a href="matematicas.html">Matematicas</a>
-</div>
+<div  class="Ingles"></div>
+<a href="ingles.html">Ingles</a>
  </div>
  <div class="contenedor2">
 
