--- a/index.html
+++ b/index.html
@@ -1,48 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>  
-   <link rel="stylesheet" href="temas.css">
-</head>
-<body>
-  <div class="contenedor">
-   
-    <div class="encabezado">
-       Tecnología e informática
-    </div>
- <div class="menu">
-<div  class="Inicio"></div>   
-<div  class="Sociales">
-<a href="sociales.html">Sociales</a>
-</div>
-<div  class="Ingles">
-   <a href="ingles.html">Ingles</a>
-</div>
-<div  class="biologia">
-   <a href="biologia.html">Biologia</a>
-</div>
-<div  class="matematicas">
-<a href="matematicas.html">Matematicas</a>
-</div>
- </div>
- <div class="contenedor2">
 
-    <div class="izquierda" >
-       
-    </div>
-    <div class="centro" >
-       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur earum beatae rerum asperiores, accusamus reprehenderit fuga. Beatae blanditiis soluta molestias voluptas incidunt praesentium consequuntur, delectus ipsum corporis, nobis rerum sequi!
-    </div>
-    <div class="derecha" >
-       Geronimo Zuluaga,
-       Juan Sebastian Villada,
-       Victor Manuel Murillo.
-    </div>
- </div>
-</div>  
+<html lang="en">
+
+<head>
+
+<meta charset="UTF-8">
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Document</title>
+
+<link rel="stylesheet" href="estilos.css">
+
+<link rel="stylesheet" href="botones.css">
+
+</head>
+
+<body>
+
+<div class="contenedor">
+
+<div class="encabezado">
+
+EJEMPLO DE MENÚ DESPLEGABLE
+
+</div>
+
+<div class="menu">
+
+<ul class="botones">
+
+<li> <a href="">Inicio</a>
+
+ 
+
+</li>
+
+<li><a href="">Tecnología</a>
+
+<ul>
+
+<li>
+
+<a href="">Período uno</a>
+
+</li>
+
+<li>
+
+<a href="">Período dos</a>
+
+</li>
+
+<li>
+
+<a href="">Período tres</a>
+
+</li>
+
+</ul>
+
+</li>
+
+<li><a href="">Sociales</a>
+
+<ul>
+
+<li>
+
+<a href="">Período uno</a>
+
+</li>
+
+<li>
+
+<a href="">Período dos</a>
+
+</li>
+
+<li>
+
+<a href="">Período tres</a>
+
+</li>
+
+</ul>
+
+</li>
+
+<li><a href="">Matemáticas</a>
+
+<ul>
+
+<li>
+
+<a href="">Período uno</a>
+
+</li>
+
+<li>
+
+<a href="">Período dos</a>
+
+</li>
+
+<li>
+
+<a href="">Período tres</a>
+
+</li>
+
+</ul>
+
+</li>
+
+<li><a href="">Inglés</a>
+
+<ul>
+
+<li>
+
+<a href="">Período uno</a>
+
+</li>
+
+<li>
+
+<a href="">Período dos</a>
+
+</li>
+
+<li>
+
+<a href="">Período tres</a>
+
+</li>
+
+</ul>
+
+</li>
+
+<li> <a href="">Acerca de</a>
+
+ 
+
+</li>
+
+</ul>
+
+</div>
+
+
+
+</div>
 
 </body>
+
 </html>
+
+
