--- a/sociales2.html
+++ b/sociales2.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body>
+<body  class="">
 
 <div class="contenedor">
 
@@ -150,7 +150,22 @@
 
 </ul>
 
+</div class="contenido">
+
+
+
+<div  class="imagensociales"></div>
+<div  class="textosociales">
+    La Revolución Francesa fue un proceso social y político que se desarrolló en Francia entre 1789 y 1799 cuyas principales consecuencias fueron la abolición de la monarquía absoluta y la proclamación de la República, eliminando las bases económicas y sociales del Antiguo Régimen.
+
+<br>
+Las motivaciones históricas que abonaron el terreno para que estallase la revolución tienen un origen político, económico, social y cultural. La primera de las grandes causas fue el rechazo de la institución monárquica francesa, con una serie de reyes manirrotos dados al exceso que culminó en la figura de Luis XVI.
+
 </div>
+
+
+
+
 
 
 
