--- a/Religion3.html
+++ b/Religion3.html
@@ -56,7 +56,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 <li>
 
-<a href="tecnologia3.html">Período tres</a>
+<a href="">Período tres</a>
 
 </li>
 
@@ -82,7 +82,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 <li>
 
-<a href="sociales3.html">Período tres</a>
+<a href="">Período tres</a>
 
 </li>
 
@@ -96,7 +96,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 <li>
 
-<a href="matematicas.html">Período uno</a>
+<a href="">Período uno</a>
 
 </li>
 
@@ -108,7 +108,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 <li>
 
-<a href="matematicas3.html">Período tres</a>
+<a href="">Período tres</a>
 
 </li>
 
@@ -132,15 +132,11 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 </li>
 
-<a href="Religion3.html">Periodo tres</a>
-
 <li>
 
-<a href="ingles3.html">Período tres</a>
+<a href="">Período tres</a>
 
 </li>
-
-<a href="biologia3.html">Periodo tres</a>
 
 </ul>
 
