Actualizacion 1:20 de noviembre del 2023

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 </li>
 
-<li><a href="">Tecnología</a>
+<li><a href="tecnologia.html">Tecnología</a>
 
 <ul>
 
@@ -64,7 +64,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 </li>
 
-<li><a href="">Sociales</a>
+<li><a href="sociales.html">Sociales</a>
 
 <ul>
 
@@ -90,13 +90,13 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 </li>
 
-<li><a href="">Matemáticas</a>
+<li><a href="matematicas.html">Matemáticas</a>
 
 <ul>
 
 <li>
 
-<a href="matematicas.html">Período uno</a>
+<a href="">Período uno</a>
 
 </li>
 
@@ -116,7 +116,7 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 </li>
 
-<li><a href="">Inglés</a>
+<li><a href="ingles.html">Inglés</a>
 
 <ul>
 
@@ -132,15 +132,35 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 </li>
 
-<a href="Religion3.html">Periodo tres</a>
-
-<li>
-
-<a href="ingles3.html">Período tres</a>
+<li>                           
+<a href="ingles3.html">periodo tres</a>
 
 </li>
 
+<li>
+
+    <a href="Religion3.html">Periodo tres</a>
+
+</li>
+
+<li>
+
+    <a href="biologia.html">biologia</a>
+
+</li>
+
+<li>
+
+<a href="biologia2.html">periodo dos</a>
+
+</li>
+
+<li>
+
 <a href="biologia3.html">Periodo tres</a>
+
+</li>
+
 
 </ul>
 
