Actualizacion 2: 20 de noviembre 2023

--- a/tecnologia2.html
+++ b/tecnologia2.html
@@ -178,12 +178,24 @@ Asignatura de Tecnologia
  
 <div  class="contenido">
 
+    <div  class="imagenoperadores"></div> <div class="texto">Operadores eléctricos son los que consiguenconvertir en luz toda la corriente eléctrica que les llega, sin perder, como las bombillas incandescentes, una parte en forma de calor. Son materiales cuya resistencia al paso de la electricidad es muy baja.</div>
+
+                <div class="imagenbasica"></div>
+<div class="texto">
+Es un componente electrónico que podemos considerarlo como un interruptor o como un amplificador. Como un interruptor por que deja o no deja pasarla corriente, y como amplificador por que con una pequeña corriente (en la base) pasa una corriente mucho mayor (entre el emisor y el colector).
+
+
+<div class="texto">El diseño de circuitos electrónicos es el primer paso para todos los proyectos de diseño electrónico y requiere la creación de un diagrama esquemático. El diagrama define cómo los conectores de los componentes eléctricos se conectan entre sí de manera lógica en un circuito impreso.
 
 
 
+      </div>
+  
+</div>
 
 
-  <div  class="imagenoperadores"></div>
+
+ 
     
 <div>
 
