--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -232,6 +232,48 @@ I..
 R._.
 <br> </br>
 O___
+<br> <br>
+
+<div class="texto">El código binario es una codificación usada para la representación de textos, o procesadores de instrucciones de computadora, utilizando el sistema binario (sistema numérico de dos dígitos, o bit: el "0" y el "1"). En informática y telecomunicaciones, el código binario se utiliza en la codificación de datos, tales como cadenas de caracteres, o cadenas de bits Por ejemplo en el caso de un CD, las señales que reflejarán el "láser" que rebotará en el CD y será recepcionado por un sensor de distinta forma indicando así, si es un cero o un uno.
+<br> <br>
+V 01010110
+<br> <br>
+I 01001001
+<br> <br>
+C 01000011
+<br> <br>
+T 01010100
+<br> <br>
+O 01001111
+<br> <br>
+R 01010010
+<br> <br>
+M01001101
+<br> <br>
+U01010101
+<br> <br>
+R 01010010
+<br> <br>
+I 01001001
+<br> <br>
+L 01001100
+<br> <br>
+L 01001100
+<br> <br>
+O 01001111
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
 
 
 
