Actualizacion 3:21 noviembre de 2023

--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -179,7 +179,10 @@ Asignatura de Tecnologia
 <div  class="contenido">
 
  <div class="texto">Los equipos tecnológicos visuales es un medio que de últiliza Para poner a disposición y dirigir información visual de distintas formas estos se crearon con el fin o propósito de mejorar la impresión visual, presenta información de manera asertiva, rápida y efectiva </div>
-<br> 
+
+ <div class="imagenequipostecno"></div>
+
+ <br> 
 <br>
 <br>
 <br>
