Actualizacion 4:21 de noviembre del 2023

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 <ul class="botones">
 
-<li> <a href="">Inicio</a>
+<li> <a href="index.html">Inicio</a>
 
  
 
 </li>
 
-<li><a href="tecnologia.html">Tecnología</a>
+<li><a href="">Tecnología</a>
 
 <ul>
 
 <li>
 
-<a href="">Período uno</a>
+<a href="tecnologia.html">Período uno</a>
 
 </li>
 
