--- a/tecnologia (2).html
+++ b/tecnologia (2).html
@@ -14,7 +14,8 @@
        Tecnología e informática
     </div>
  <div class="menu">
-<div  class="Inicio"></div>   
+<div  class="Inicio"></div>
+<a href="index.html">Inicio</a>
 <div  class="Sociales">
 <a href="sociales.html">Sociales</a>
 </div>
