--- a/tecnologia.html
+++ b/tecnologia.html
@@ -15,6 +15,7 @@
     </div>
  <div class="menu">
 <div  class="Inicio"></div>   
+<a href="index.html">Inicio</a>
 <div  class="Sociales">
 <a href="sociales.html">Sociales</a>
 </div>
