--- a/tecnologia2.html
+++ b/tecnologia2.html
@@ -32,19 +32,19 @@ Asignatura de Tecnologia
 
 <ul class="botones">
 
-<li> <a href="">Inicio</a>
+<li> <a href="index.html">Inicio</a>
 
  
 
 </li>
 
-<li><a href="tecnologia.html">Tecnología</a>
+<li><a href="">Tecnología</a>
 
 <ul>
 
 <li>
 
-<a href="">Período uno</a>
+<a href="tecnologia.html">Período uno</a>
 
 </li>
 
@@ -56,7 +56,7 @@ Asignatura de Tecnologia
 
 <li>
 
-<a href="">Período tres</a>
+<a href="tecnologia3.html">Período tres</a>
 
 </li>
 
