--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -32,19 +32,19 @@ Asignatura de Tecnologia
 
 <ul class="botones">
 
-<li> <a href="">Inicio</a>
-
+<li> 
+    <a href="index.html">Inicio</a>
  
 
 </li>
 
-<li><a href="tecnologia.html">Tecnología</a>
+<li><a href="">Tecnología</a>
 
 <ul>
 
 <li>
 
-<a href="">Período uno</a>
+<a href="tecnologia.html">Período uno</a>
 
 </li>
 
@@ -56,7 +56,7 @@ Asignatura de Tecnologia
 
 <li>
 
-<a href="">Período tres</a>
+<a href="tecnologia3.html">Período tres</a>
 
 </li>
 
@@ -64,13 +64,13 @@ Asignatura de Tecnologia
 
 </li>
 
-<li><a href="sociales.html">Sociales</a>
+<li><a href="">Sociales</a>
 
 <ul>
 
 <li>
 
-<a href="">Período uno</a>
+<a href="sociales.html">Período uno</a>
 
 </li>
 
@@ -90,13 +90,13 @@ Asignatura de Tecnologia
 
 </li>
 
-<li><a href="matematicas.html">Matemáticas</a>
+<li><a href="">Matemáticas</a>
 
 <ul>
 
 <li>
 
-<a href="">Período uno</a>
+<a href="matematicas.html">Período uno</a>
 
 </li>
 
@@ -116,13 +116,13 @@ Asignatura de Tecnologia
 
 </li>
 
-<li><a href="ingles.html">Inglés</a>
+<li><a href="">Inglés</a>
 
 <ul>
 
 <li>
 
-<a href="">Período uno</a>
+<a href="ingles.html">Período uno</a>
 
 </li>
 
